Agregando nueva versión del curso inicial

--- a/content/frame-izquierdo.html
+++ b/content/frame-izquierdo.html
@@ -117,6 +117,7 @@ border-right: 3px solid #CE7D35;
 <div class="row">
 <li class="col-11 nav-item" id="principal"><a class="nav-link" href="#" role="button" data-toggle="collapse" data-target="#submenu6" aria-haspopup="true" aria-expanded="false">Semana 3: Generalidades de Redes e Internet</a>
 <ul class="collapse navbar-nav flex-column" id="submenu6">
+<li class="nav-item"><a class="nav-link" href="semana-3-generalidades-de-redes-e-internet/no-lea-esto/no-lea-esto.html" target="derecho">NO lea esto</a></li>
 <li class="nav-item"><a class="nav-link" href="semana-3-generalidades-de-redes-e-internet/objetivo-de-la-semana/objetivo.html" target="derecho">Objetivo de la semana</a></li>
 <li class="nav-item"><a class="nav-link" href="semana-3-generalidades-de-redes-e-internet/contenido/tematicas.html" target="derecho">Contenido</a></li>
 <div class="row">
@@ -160,6 +161,7 @@ border-right: 3px solid #CE7D35;
 <ul class="collapse navbar-nav flex-column" id="submenu7">
 <li class="nav-item"><a class="nav-link" href="semana-4-sistemas-de-numeracion-parte-1/objetivo-de-la-semana/objetivo.html" target="derecho">Objetivo de la semana</a></li>
 <li class="nav-item"><a class="nav-link" href="semana-4-sistemas-de-numeracion-parte-1/contenido/tematicas.html" target="derecho">Contenido</a></li>
+<li class="nav-item"><a class="nav-link" href="semana-4-sistemas-de-numeracion-parte-1/importante/importante.html" target="derecho">Importante</a></li>
 <div class="row">
 <li class="col-11 nav-item" id="principal2"><a class="nav-link" href="#" role="button" data-toggle="collapse" data-target="#menu-submenu8" aria-haspopup="true" aria-expanded="false">Recursos de revisión obligatoria</a></li>
 <span class="pt-3 col-1 dropdown-toggle"></span>
@@ -181,6 +183,7 @@ border-right: 3px solid #CE7D35;
 <div class="row">
 <li class="col-11 nav-item" id="principal"><a class="nav-link" href="#" role="button" data-toggle="collapse" data-target="#submenu8" aria-haspopup="true" aria-expanded="false">Semana 5: Sistemas de Numeración (parte 2)</a>
 <ul class="collapse navbar-nav flex-column" id="submenu8">
+<li class="nav-item"><a class="nav-link" href="semana-5-sistemas-de-numeracion-parte-2/nota-importante/nota-importante.html" target="derecho">Nota importante:</a></li>
 <li class="nav-item"><a class="nav-link" href="semana-5-sistemas-de-numeracion-parte-2/objetivo-de-la-semana/objetivo.html" target="derecho">Objetivo de la semana</a></li>
 <li class="nav-item"><a class="nav-link" href="semana-5-sistemas-de-numeracion-parte-2/contenido/tematicas.html" target="derecho">Contenido</a></li>
 <div class="row">
@@ -205,40 +208,44 @@ border-right: 3px solid #CE7D35;
 <div class="row">
 <li class="col-11 nav-item" id="principal"><a class="nav-link" href="#" role="button" data-toggle="collapse" data-target="#submenu9" aria-haspopup="true" aria-expanded="false">Semana 6: Inteligencia Artificial (conceptos introductorios)</a>
 <ul class="collapse navbar-nav flex-column" id="submenu9">
+<li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/introduccion/introduccion.html" target="derecho">Introducción</a></li>
 <li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/objetivo-de-la-semana/objetivo.html" target="derecho">Objetivo de la semana</a></li>
 <li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/contenido/tematicas.html" target="derecho">Contenido</a></li>
 <div class="row">
-<li class="col-11 nav-item" id="principal2"><a class="nav-link" href="#" role="button" data-toggle="collapse" data-target="#menu-submenu10" aria-haspopup="true" aria-expanded="false">Reto 2</a></li>
+<li class="col-11 nav-item" id="principal2"><a class="nav-link" href="#" role="button" data-toggle="collapse" data-target="#menu-submenu10" aria-haspopup="true" aria-expanded="false">Recursos de revisión obligatoria</a></li>
 <span class="pt-3 col-1 dropdown-toggle"></span>
 </div>
 
 <ul class="collapse navbar-nav flex-column" id="menu-submenu10">
-<li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/reto-2/instrucciones/instrucciones.html" target="derecho">Instrucciones</a></li>
-<li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/reto-2/rubrica-para-evaluacion-de-pares/rubrica-para-evaluacion-de-pares.html" target="derecho">Rúbrica para evaluación de pares</a></li>
-</ul>
-<div class="row">
-<li class="col-11 nav-item" id="principal2"><a class="nav-link" href="#" role="button" data-toggle="collapse" data-target="#menu-submenu11" aria-haspopup="true" aria-expanded="false">Recursos de revisión obligatoria</a></li>
-<span class="pt-3 col-1 dropdown-toggle"></span>
-</div>
-
-<ul class="collapse navbar-nav flex-column" id="menu-submenu11">
 <li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/recursos-de-revision-obligatoria/alan-turing,-inteligencia-militar-y-maquinas-inteligentes/alan-turing,-inteligencia-militar-y-maquinas-inteligentes.html" target="derecho">Alan Turing, inteligencia militar y máquinas inteligentes</a></li>
 <li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/recursos-de-revision-obligatoria/definiciones-de-ia/definiciones-de-ia.html" target="derecho">Definiciones de IA</a></li>
 <li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/recursos-de-revision-obligatoria/bases-de-la-ia/bases-de-la-ia.html" target="derecho">Bases de la IA</a></li>
 <li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/recursos-de-revision-obligatoria/evolucion-de-la-ia/evolucion-de-la-ia.html" target="derecho">Evolución de la IA</a></li>
 <li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/recursos-de-revision-obligatoria/aplicaciones-de-la-ia/aplicaciones-de-la-ia.html" target="derecho">Aplicaciones de la IA</a></li>
+<li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/recursos-de-revision-obligatoria/actualidad-en-ia/actualidad-en-ia.html" target="derecho">Actualidad en IA</a></li>
+<li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/recursos-de-revision-obligatoria/la-ia-y-el-futuro.../la-ia-y-el-futuro....html" target="derecho">La IA y el futuro...</a></li>
 </ul>
 <div class="row">
-<li class="col-11 nav-item" id="principal2"><a class="nav-link" href="#" role="button" data-toggle="collapse" data-target="#menu-submenu12" aria-haspopup="true" aria-expanded="false">Recursos complementarios (opcionales)</a></li>
+<li class="col-11 nav-item" id="principal2"><a class="nav-link" href="#" role="button" data-toggle="collapse" data-target="#menu-submenu11" aria-haspopup="true" aria-expanded="false">Recursos complementarios (opcionales)</a></li>
 <span class="pt-3 col-1 dropdown-toggle"></span>
 </div>
 
-<ul class="collapse navbar-nav flex-column" id="menu-submenu12">
+<ul class="collapse navbar-nav flex-column" id="menu-submenu11">
 <li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/recursos-complementarios-opcionales/sistemas-expertos/sistemas-expertos.html" target="derecho">Sistemas expertos</a></li>
 <li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/recursos-complementarios-opcionales/redes-neuronales/redes-neuronales.html" target="derecho">Redes neuronales</a></li>
 <li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/recursos-complementarios-opcionales/robotica/robotica.html" target="derecho">Robótica</a></li>
 </ul>
+<li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/autoevaluacion/autoevaluacion.html" target="derecho">Autoevaluación</a></li>
 <li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/test/test.html" target="derecho">Test</a></li>
+<div class="row">
+<li class="col-11 nav-item" id="principal2"><a class="nav-link" href="#" role="button" data-toggle="collapse" data-target="#menu-submenu12" aria-haspopup="true" aria-expanded="false">Reto 2</a></li>
+<span class="pt-3 col-1 dropdown-toggle"></span>
+</div>
+
+<ul class="collapse navbar-nav flex-column" id="menu-submenu12">
+<li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/reto-2/instrucciones/instrucciones.html" target="derecho">Instrucciones</a></li>
+<li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/reto-2/rubrica-para-evaluacion-de-pares/rubrica-para-evaluacion-de-pares.html" target="derecho">Rúbrica para evaluación de pares</a></li>
+</ul>
 <div class="row">
 <li class="col-11 nav-item" id="principal2"><a class="nav-link" href="#" role="button" data-toggle="collapse" data-target="#menu-submenu13" aria-haspopup="true" aria-expanded="false">Reto</a></li>
 <span class="pt-3 col-1 dropdown-toggle"></span>
@@ -246,6 +253,7 @@ border-right: 3px solid #CE7D35;
 
 <ul class="collapse navbar-nav flex-column" id="menu-submenu13">
 <li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/reto/reto-02/reto-02.html" target="derecho">Reto 02</a></li>
+<li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/reto/rubrica-para-evaluacion-de-pares/rubrica-para-evaluacion-de-pares.html" target="derecho">Rúbrica para evaluación de pares</a></li>
 <li class="nav-item"><a class="nav-link" href="semana-6-inteligencia-artificial-conceptos-introductorios/reto/unidad/unidad.html" target="derecho">Unidad</a></li>
 </ul>
 </ul>
@@ -255,6 +263,7 @@ border-right: 3px solid #CE7D35;
 <div class="row">
 <li class="col-11 nav-item" id="principal"><a class="nav-link" href="#" role="button" data-toggle="collapse" data-target="#submenu10" aria-haspopup="true" aria-expanded="false">Encuesta de satisfacción</a>
 <ul class="collapse navbar-nav flex-column" id="submenu10">
+<li class="nav-item"><a class="nav-link" href="encuesta-de-satisfaccion/encuesta-de-satisfaccion/encuesta-de-satisfaccion.html" target="derecho">Encuesta de satisfacción</a></li>
 </ul>
 </li>
 <span class="pt-3 col-1 dropdown-toggle"></span>
@@ -265,6 +274,11 @@ border-right: 3px solid #CE7D35;
 <li class="nav-item"><a class="nav-link" href="anuncios/anuncios/semana-1/semana-1.html" target="derecho">Semana 1</a></li>
 <li class="nav-item"><a class="nav-link" href="anuncios/anuncios/unidad/unidad.html" target="derecho">Unidad</a></li>
 <li class="nav-item"><a class="nav-link" href="anuncios/anuncios/unidad-1/unidad-1.html" target="derecho">Unidad</a></li>
+<li class="nav-item"><a class="nav-link" href="anuncios/anuncios/reto/reto.html" target="derecho">Reto</a></li>
+<li class="nav-item"><a class="nav-link" href="anuncios/anuncios/semana-3/semana-3.html" target="derecho">Semana 3</a></li>
+<li class="nav-item"><a class="nav-link" href="anuncios/anuncios/semana-5/semana-5.html" target="derecho">Semana 5</a></li>
+<li class="nav-item"><a class="nav-link" href="anuncios/anuncios/semana-6/semana-6.html" target="derecho">Semana 6</a></li>
+<li class="nav-item"><a class="nav-link" href="anuncios/anuncios/unidad-2/unidad-2.html" target="derecho">Unidad</a></li>
 </ul>
 </li>
 <span class="pt-3 col-1 dropdown-toggle"></span>
