--- a/content/semana-6-inteligencia-artificial-conceptos-introductorios/reto-2/instrucciones/instrucciones-1.html
+++ b/content/semana-6-inteligencia-artificial-conceptos-introductorios/reto-2/instrucciones/instrucciones-1.html
@@ -7,16 +7,13 @@ border-radius: 23px;
 <div class ="container">
 <div class="row justify-content-center">
 <div class="btn-group btn-group-lg col-6 p-0 my-4 border border-dark botones" role="group" aria-label="Toolbar with button groups">
-<a class="btn btn-outline-dark border-0 col-auto" href="rubrica-para-evaluacion-de-pares.html" data-toggle="button" aria-pressed="false" autocomplete="off">Page</a>
+<a class="btn btn-outline-dark border-0 col-auto" href="instrucciones.html" data-toggle="button" aria-pressed="false" autocomplete="off">Page</a>
+<a class="btn btn-outline-dark border-0 col-auto" href="instrucciones-1.html" data-toggle="button" aria-pressed="false" autocomplete="off">Page</a>
 </div><br><br>
 </div>
 <h3 style="box-sizing: inherit; color: #2e2e2e; font-variant-numeric: normal; font-variant-east-asian: normal; font-stretch: normal; line-height: 1.4em; font-family: 'Source Sans', 'Open Sans', Verdana, Geneva, sans-serif, sans-serif; background-color: rgba(255, 255, 255, 0.75);"><span style="box-sizing: inherit; font-style: inherit; font-variant: inherit; font-weight: inherit; font-stretch: inherit; font-size: inherit; line-height: 1.4em; font-family: inherit; color: #993366;"><strong style="box-sizing: inherit; line-height: 1.4em;">R&uacute;brica de evaluaci&oacute;n para el Reto 02</strong></span></h3>
 
 <p style="box-sizing: inherit; color: #2e2e2e; margin: 0px 0px 1.41575em; font-family: 'Source Sans', 'Open Sans', Verdana, Geneva, sans-serif, sans-serif; font-size: 16px; background-color: rgba(255, 255, 255, 0.75);">Estimado participante, revise la siguiente r&uacute;brica. Se describen los aspectos a evaluar, mismos que le servir&aacute;n para&nbsp;revisar su trabajo previo a su presentaci&oacute;n y para hacer la evaluaci&oacute;n a sus pares.</p>
-
-<p style="box-sizing: inherit; color: #2e2e2e; margin-right: 0px; margin-bottom: 1.41575em; margin-left: 0px; font-family: 'Source Sans', 'Open Sans', Verdana, Geneva, sans-serif, sans-serif; font-size: 16px; background-color: rgba(255, 255, 255, 0.75);"><strong style="box-sizing: inherit; line-height: 1.4em;">Sobre la evaluaci&oacute;n de pares:</strong>&nbsp; los trabajos a evaluar se asignan en la fecha establecida y en el mismo espacio donde subi&oacute; su trabajo, a continuaci&oacute;n de lo que usted subi&oacute;. Las im&aacute;genes de sus pares se listar&aacute;n en el mismo espacio donde subi&oacute; su trabajo y deber&aacute; observar y emitir su criterio de puntuaci&oacute;n.</p>
-
-<p style="box-sizing: inherit; color: #2e2e2e; margin-right: 0px; margin-bottom: 1.41575em; margin-left: 0px; font-family: 'Source Sans', 'Open Sans', Verdana, Geneva, sans-serif, sans-serif; font-size: 16px; background-color: rgba(255, 255, 255, 0.75);">&nbsp;</p>
 
 <table style="height: 483px;" width="1062">
 
@@ -79,10 +76,6 @@ border-radius: 23px;
 </table>
 
 <p>&nbsp;</p>
-
-<p></p>
-
-<p></p>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
