--- a/content/frame-izquierdo.html
+++ b/content/frame-izquierdo.html
@@ -285,6 +285,28 @@ border-right: 3px solid #CE7D35;
 </div>
 </ul>
 </nav>
+<br><br>
+<hr>
+<footer class="py-4 text-center">
+<table border="0" width="100%">
+<tbody>
+<tr>
+<td>
+<span>Bajo licencia<br><br>
+<a href="https://mirrors.creativecommons.org/" target="_blank"><img src="http://opencampus.utpl.edu.ec/static/themes/utpl_final/images/LicenciaCC.e5985f534b90.png" width="115px" height="45px"></a>
+</span></td>
+<td>
+<span>Powered by<br><br>
+<a href="https://www.utpl.edu.ec/#" target="_blank"><img src="https://www.utpl.edu.ec/manual_imagen/images/institucional/UTPL-INSTITUCIONAL-color.jpg" width="115px" height="45px"></a>
+</span></td>
+<td>
+<span>Empowed by<br><br>
+ <a href="https://open.edx.org/" target="_blank"><img src="http://opencampus.utpl.edu.ec/static/themes/utpl_final/images/OpenEdx.5def54e4aeb8.png" width="115px" height="45px"></a>
+</span></td>
+</tr>
+</tbody>
+</table>
+</footer>
 </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
