Cambiando logo de la institucion

--- a/content/frame-superior.html
+++ b/content/frame-superior.html
@@ -19,7 +19,7 @@ width: 70%;
 </head>
 <body>
 <div>
-<img src="http://opencampus.utpl.edu.ec/static/themes/utpl_final/images/openCampus_logo.3c9532a0c56d.png">
+<img src="https://www.utpl.edu.ec/manual_imagen/images/institucional/UTPL-INSTITUCIONAL-color.jpg">
 <h1>FUNDAMENTOS INFORMÁTICOS (EDICIÓN 3)
 </h1>
 </div>
